Patreon Release: 21.15.0.1
Main features
- Refactored UI components
- Rebooted Setting screen
- Data-driven Emote wheel update