@@ -2,11 +2,11 @@ package yesman.epicfight.config;
 
 import net.minecraft.client.Minecraft;
 import net.minecraft.core.registries.BuiltInRegistries;
+import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.util.StringRepresentable;
 import net.minecraft.world.item.Item;
 import net.neoforged.api.distmarker.Dist;
-import net.neoforged.api.distmarker.OnlyIn;
 import net.neoforged.bus.api.SubscribeEvent;
 import net.neoforged.fml.common.EventBusSubscriber;
 import net.neoforged.fml.config.ModConfig;
@@ -14,33 +14,30 @@ import net.neoforged.fml.event.config.ModConfigEvent;
 import net.neoforged.neoforge.common.ModConfigSpec;
 import net.neoforged.neoforge.common.ModConfigSpec.*;
 import org.apache.commons.compress.utils.Lists;
-import yesman.epicfight.api.client.camera.EpicFightCameraAPI;
 import org.jetbrains.annotations.NotNull;
-import yesman.epicfight.client.online.EpicFightServerConnectionHelper;
+import yesman.epicfight.api.client.camera.EpicFightCameraAPI;
 import yesman.epicfight.api.utils.CirculatableEnum;
-import yesman.epicfight.api.utils.ParseUtil;
 import yesman.epicfight.api.utils.math.Vec2i;
 import yesman.epicfight.client.ClientEngine;
 import yesman.epicfight.client.gui.ScreenCalculations.AlignDirection;
 import yesman.epicfight.client.gui.ScreenCalculations.HorizontalBasis;
 import yesman.epicfight.client.gui.ScreenCalculations.VerticalBasis;
-import yesman.epicfight.client.gui.widgets.ColorSlider;
+import yesman.epicfight.client.gui.widgets.ColorDeterminator;
+import yesman.epicfight.client.online.EpicFightServerConnectionHelper;
 import yesman.epicfight.main.AuthenticationHelper.AuthenticationProvider;
 import yesman.epicfight.main.EpicFightMod;
 
 import java.lang.reflect.Constructor;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Set;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
+import static yesman.epicfight.generated.LangKeys.*;
+
 @EventBusSubscriber(modid = EpicFightMod.MODID, value = Dist.CLIENT)
-@OnlyIn(Dist.CLIENT)
 public class ClientConfig {
-	private static final ModConfigSpec.Builder BUILDER = new ModConfigSpec.Builder();
-	
-	// Graphic Configurations
+    private static final ModConfigSpec.Builder BUILDER = new ModConfigSpec.Builder();
 
     // UI
     public static final BooleanValue SHOW_TARGET_INDICATOR = BUILDER.define("ingame.show_target_indicator", () -> true);
@@ -50,8 +47,9 @@ public class ClientConfig {
     public static final EnumValue<BlockGuideOptions> MINE_BLOCK_GUIDE_OPTION = BUILDER.defineEnum("ingame.mine_block_guide_option", BlockGuideOptions.CROSSHAIR);
     public static final BooleanValue ENABLE_TARGET_ENTITY_GUIDE = BUILDER.define("ingame.enable_target_entity_guide", () -> true);
 
-    // Particle
+    // Graphics
     public static final BooleanValue BLOOD_EFFECTS = BUILDER.define("ingame.blood_effects", () -> true);
+    public static final BooleanValue ACTIVATE_COMPUTE_SHADER = BUILDER.define("ingame.use_compute_shader", () -> false);
 
     // Model
     public static final IntValue MAX_STUCK_PROJECTILES = BUILDER.defineInRange("ingame.max_hit_projectiles", 30, 0, 30);
@@ -59,23 +57,20 @@ public class ClientConfig {
     public static final BooleanValue ENABLE_PLAYER_VANILLA_MODEL = BUILDER.define("ingame.enable_player_vanilla_model", () -> true);
     public static final BooleanValue ENABLE_COSMETICS = BUILDER.define("ingame.enable_cosmetics", () -> true);
 
-    // Performance
-    public static final BooleanValue ACTIVATE_COMPUTE_SHADER = BUILDER.define("ingame.use_compute_shader", () -> false);
-
     // Camera
-    public static final BooleanValue ENABLE_POV_ACTION = BUILDER.define("ingame.enable_pov_action", () -> true);
-    public static final ConfigValue<TPSType> CAMERA_MODE = BUILDER.defineEnum("ingame.camera.camera_mode", TPSType.WHEN_AIMING);
+    public static final BooleanValue ENABLE_FIRST_PERSON_CAMERA_MOVE = BUILDER.define("ingame.enable_pov_action", () -> true);
+    public static final ConfigValue<TPSActivationType> TPS_TYPE = BUILDER.defineEnum("ingame.camera.camera_mode", TPSActivationType.ON_AIMING);
     public static final IntValue CAMERA_HORIZONTAL_LOCATION = BUILDER.defineInRange("ingame.camera.horizontal_location", -5, -10, 10);
     public static final IntValue CAMERA_VERTICAL_LOCATION = BUILDER.defineInRange("ingame.camera.vertical_location", 0, -2, 5);
     public static final IntValue CAMERA_ZOOM = BUILDER.defineInRange("ingame.camera.zoom", 3, 6, 10);
-    public static final IntValue LOCK_ON_RANGE = BUILDER.defineInRange("ingame.camera.lock_on_range", 20, 5, 25);
+    public static final BooleanValue LOCK_ON_SNAPPING = BUILDER.define("ingame.camera.lock_on_quick_shift", () -> true);
+    public static final IntValue ENTITY_FOCUSING_RANGE = BUILDER.defineInRange("ingame.camera.lock_on_range", 20, 5, 25);
 
-    // Control Configurations
-	public static final IntValue LONG_PRESS_COUNTER = BUILDER.defineInRange("ingame.long_press_count", 2, 1, 10);
-	public static final BooleanValue AUTO_SWITCH_CAMERA = BUILDER.define("ingame.camera_auto_switch", () -> false);
-    public static final BooleanValue LOCK_ON_QUICK_SHIFT = BUILDER.define("ingame.camera.lock_on_quick_shift", () -> true);
-	public static final EnumValue<KeyConflictResolveScope> KEY_CONFLICT_RESOLVE_SCOPE = BUILDER.defineEnum("ingame.key_conflict_resolve_scope", KeyConflictResolveScope.INTERACTION);
-	public static final EnumValue<PreferenceWork> PREFERENCE_WORK = BUILDER.defineEnum("ingame.preference_work", PreferenceWork.ADAPTIVE);
+    // Controls
+    public static final IntValue HOLDING_THRESHOLD = BUILDER.defineInRange("ingame.long_press_count", 2, 1, 10);
+    public static final BooleanValue AUTO_PERSPECTIVE_SWITCHING = BUILDER.define("ingame.camera_auto_switch", () -> false);
+    public static final EnumValue<CanceledVanillaActions> CANCEL_VANILLA_ACTION = BUILDER.defineEnum("ingame.key_conflict_resolve_scope", CanceledVanillaActions.INTERACTION);
+    public static final EnumValue<PlayerBehaviorStrategy> PLAYER_BEHAVIOR_STRATEGY = BUILDER.defineEnum("ingame.preference_work", PlayerBehaviorStrategy.ADAPTIVE);
     public static final EnumValue<CameraPerspectiveToggleMode> CAMERA_PERSPECTIVE_TOGGLE_MODE = BUILDER
             .comment("""
                     Defines how the camera toggles perspectives.
@@ -90,29 +85,29 @@ public class ClientConfig {
                     """)
             .defineEnum("ingame.camera_perspective_toggle_mode", CameraPerspectiveToggleMode.VANILLA);
 
-	public static final ConfigValue<List<? extends String>> COMBAT_PREFERRED_ITEMS = BUILDER.defineList("ingame.combat_preferred_items", Lists.newArrayList(), null, (element) -> {
-		if (element instanceof String str) {
-			return str.contains(":");
-		}
-		
-		return false;
-	});
-	
-	public static final ConfigValue<List<? extends String>> MINING_PREFERRED_ITEMS = BUILDER.defineListAllowEmpty("ingame.mining_preferred_items", Lists.newArrayList(), null, (element) -> {
-		if (element instanceof String str) {
-			return str.contains(":");
-		}
-		
-		return false;
-	});
+    public static final ConfigValue<List<? extends String>> COMBAT_CATEGORIZED_ITEMS = BUILDER.defineList("ingame.combat_preferred_items", Lists.newArrayList(), null, (element) -> {
+        if (element instanceof String str) {
+            return str.contains(":");
+        }
 
-    // UI Element Positions
+        return false;
+    });
+
+    public static final ConfigValue<List<? extends String>> MINING_CATEGORIZED_ITEMS = BUILDER.defineListAllowEmpty("ingame.mining_preferred_items", Lists.newArrayList(), null, (element) -> {
+        if (element instanceof String str) {
+            return str.contains(":");
+        }
+
+        return false;
+    });
+
+    // UI Component positions
 
     // Stamina bar
-	public static final ConfigValue<Integer> STAMINA_BAR_X = BUILDER.define("ingame.ui.stamina_bar_x", 120);
-	public static final ConfigValue<Integer> STAMINA_BAR_Y = BUILDER.define("ingame.ui.stamina_bar_y", 10);
-	public static final EnumValue<HorizontalBasis> STAMINA_BAR_BASE_X = BUILDER.defineEnum("ingame.ui.stamina_bar_x_base", HorizontalBasis.RIGHT);
-	public static final EnumValue<VerticalBasis> STAMINA_BAR_BASE_Y = BUILDER.defineEnum("ingame.ui.stamina_bar_y_base", VerticalBasis.BOTTOM);
+    public static final ConfigValue<Integer> STAMINA_BAR_X = BUILDER.define("ingame.ui.stamina_bar_x", 120);
+    public static final ConfigValue<Integer> STAMINA_BAR_Y = BUILDER.define("ingame.ui.stamina_bar_y", 10);
+    public static final EnumValue<HorizontalBasis> STAMINA_BAR_BASE_X = BUILDER.defineEnum("ingame.ui.stamina_bar_x_base", HorizontalBasis.RIGHT);
+    public static final EnumValue<VerticalBasis> STAMINA_BAR_BASE_Y = BUILDER.defineEnum("ingame.ui.stamina_bar_y_base", VerticalBasis.BOTTOM);
     // Weapon Innate
     public static final ConfigValue<Integer> WEAPON_INNATE_X = BUILDER.define("ingame.ui.weapon_innate_x", 42);
     public static final ConfigValue<Integer> WEAPON_INNATE_Y = BUILDER.define("ingame.ui.weapon_innate_y", 48);
@@ -131,515 +126,569 @@ public class ClientConfig {
     public static final EnumValue<VerticalBasis> CHARGING_BAR_BASE_Y = BUILDER.defineEnum("ingame.ui.charging_bar_y_base", VerticalBasis.CENTER);
 
     //Epic Skins Tokens
-	public static final ModConfigSpec.ConfigValue<String> ACCESS_TOKEN = BUILDER.comment("Login information for epic fight patron server. Do not change these values manually").define("access_token", "");
-	public static final ModConfigSpec.ConfigValue<String> REFRESH_TOKNE = BUILDER.define("refresh_token", "");
-	public static final ModConfigSpec.EnumValue<AuthenticationProvider> PROVIDER = BUILDER.defineEnum("provider", AuthenticationProvider.NULL);
-	
-	// Config Spec
-	public static final ModConfigSpec SPEC = BUILDER.build();
-	
-	// Graphic Config Values
-	public static int maxStuckProjectiles;
-	public static double targetOutlineColor;
-	public static int packedTargetOutlineColor = 0xFFFFFFFF;
-	public static boolean bloodEffects;
-	public static boolean showEpicFightAttributesInTooltip;
-	public static boolean activateComputeShader;
-	public static boolean enableAnimatedFirstPersonModel;
-	public static BlockGuideOptions mineBlockGuideOption;
-	public static boolean enableTargetEntityGuide;
-	public static boolean enablePovAction;
-	public static boolean enableCosmetics;
-	public static boolean enableOriginalModel;
-	
-	// Control Config Values
-	public static int longPressCounter;
-	public static boolean autoSwitchCamera;
-    public static boolean lockOnQuickShift;
-	public static KeyConflictResolveScope keyConflictResolveScope;
-	public static PreferenceWork preferenceWork;
-    public static CameraPerspectiveToggleMode cameraPerspectiveToggleMode;
+    public static final ModConfigSpec.ConfigValue<String> ACCESS_TOKEN = BUILDER.comment("Login information for epic fight patron server. Do not change these values manually").define("access_token", "");
+    public static final ModConfigSpec.ConfigValue<String> REFRESH_TOKNE = BUILDER.define("refresh_token", "");
+    public static final ModConfigSpec.EnumValue<AuthenticationProvider> PROVIDER = BUILDER.defineEnum("provider", AuthenticationProvider.NULL);
 
-	public static Set<Item> combatPreferredItems;
-	public static Set<Item> miningPreferredItems;
-    public static TPSType cameraMode;
+    // Config Spec
+    public static final ModConfigSpec SPEC = BUILDER.build();
+
+    // Config values
+
+    // Graphic Config values
+    public static boolean bloodEffects;
+    public static boolean activateComputeShader;
+
+    // Model Config values
+    public static int maxStuckProjectiles;
+    public static boolean enableAnimatedFirstPersonModel;
+    public static boolean enableOriginalModel;
+    public static boolean enableCosmetics;
+
+    // Camera Config values
+    public static boolean enableFirstPersonCameraMove;
+    public static TPSActivationType tpsType;
     public static int cameraHorizontalLocation;
     public static int cameraVerticalLocation;
     public static int cameraZoom;
-    public static int lockOnRange;
+    public static int entityFocusingRange;
+    public static boolean lockOnSnapping;
 
-	// UI Config value
-	public static boolean showTargetIndicator;
-	public static HealthBarVisibility healthBarVisibility;
-	public static int staminaBarX;
-	public static int staminaBarY;
-	public static HorizontalBasis staminaBarBaseX;
-	public static VerticalBasis staminaBarBaseY;
-	public static int weaponInnateX;
-	public static int weaponInnateY;
-	public static HorizontalBasis weaponInnateBaseX;
-	public static VerticalBasis weaponInnateBaseY;
-	public static int passiveX;
-	public static int passiveY;
-	public static HorizontalBasis passiveBaseX;
-	public static VerticalBasis passiveBaseY;
-	public static AlignDirection passiveAlignDirection;
-	public static int chargingBarX;
-	public static int chargingBarY;
-	public static HorizontalBasis chargingBarBaseX;
-	public static VerticalBasis chargingBarBaseY;
-	
-	@SubscribeEvent
+    // Control Config values
+    public static int holdingThreshold;
+    public static boolean autoPerspectiveSwithing;
+    public static CanceledVanillaActions canceledVanillaActions;
+    public static PlayerBehaviorStrategy playerBehaviorStrategy;
+    public static CameraPerspectiveToggleMode cameraPerspectiveToggleMode;
+    public static Set<Item> combatCategorizedItems;
+    public static Set<Item> miningCategorizedItems;
+
+    // UI Config values
+    public static boolean showTargetIndicator;
+    public static HealthBarVisibility healthBarVisibility;
+    public static boolean showEpicFightAttributesInTooltip;
+    public static double targetOutlineColor;
+    public static int packedTargetOutlineColor = 0xFFFFFFFF;
+    public static BlockGuideOptions mineBlockGuideOption;
+    public static boolean enableTargetEntityGuide;
+
+    // UI Component position values
+    public static int staminaBarX;
+    public static int staminaBarY;
+    public static HorizontalBasis staminaBarBaseX;
+    public static VerticalBasis staminaBarBaseY;
+    public static int weaponInnateX;
+    public static int weaponInnateY;
+    public static HorizontalBasis weaponInnateBaseX;
+    public static VerticalBasis weaponInnateBaseY;
+    public static int passiveX;
+    public static int passiveY;
+    public static HorizontalBasis passiveBaseX;
+    public static VerticalBasis passiveBaseY;
+    public static AlignDirection passiveAlignDirection;
+    public static int chargingBarX;
+    public static int chargingBarY;
+    public static HorizontalBasis chargingBarBaseX;
+    public static VerticalBasis chargingBarBaseY;
+
+    @SubscribeEvent
     static void epicfight$modConfigLoading(final ModConfigEvent.Loading event) {
-		if (event.getConfig().getType() != ModConfig.Type.CLIENT) {
-			return;
-		}
-		
-		maxStuckProjectiles = MAX_STUCK_PROJECTILES.get();
+        if (event.getConfig().getType() != ModConfig.Type.CLIENT) {
+            return;
+        }
+
+        maxStuckProjectiles = MAX_STUCK_PROJECTILES.get();
         targetOutlineColor = TARGET_OUTLINE_COLOR.get();
-        packedTargetOutlineColor = ColorSlider.rgbColor(targetOutlineColor);
-		bloodEffects = BLOOD_EFFECTS.get();
-		showEpicFightAttributesInTooltip = SHOW_EPICFIGHT_ATTRIBUTES_IN_TOOLTIP.get();
-		activateComputeShader = ACTIVATE_COMPUTE_SHADER.get();
-		enableAnimatedFirstPersonModel = ENABLE_ANIMATED_FIRST_PERSON_MODEL.get();
-		mineBlockGuideOption = MINE_BLOCK_GUIDE_OPTION.get();
-		enableTargetEntityGuide = ENABLE_TARGET_ENTITY_GUIDE.get();
-		enablePovAction = ENABLE_POV_ACTION.get();
-		enableCosmetics = ENABLE_COSMETICS.get();
-		enableOriginalModel = ENABLE_PLAYER_VANILLA_MODEL.get();
-        cameraMode = CAMERA_MODE.get();
+        packedTargetOutlineColor = ColorDeterminator.positionToPackedRGBA(targetOutlineColor);
+        bloodEffects = BLOOD_EFFECTS.get();
+        showEpicFightAttributesInTooltip = SHOW_EPICFIGHT_ATTRIBUTES_IN_TOOLTIP.get();
+        activateComputeShader = ACTIVATE_COMPUTE_SHADER.get();
+        enableAnimatedFirstPersonModel = ENABLE_ANIMATED_FIRST_PERSON_MODEL.get();
+        mineBlockGuideOption = MINE_BLOCK_GUIDE_OPTION.get();
+        enableTargetEntityGuide = ENABLE_TARGET_ENTITY_GUIDE.get();
+        enableFirstPersonCameraMove = ENABLE_FIRST_PERSON_CAMERA_MOVE.get();
+        enableCosmetics = ENABLE_COSMETICS.get();
+        enableOriginalModel = ENABLE_PLAYER_VANILLA_MODEL.get();
+        tpsType = TPS_TYPE.get();
         cameraHorizontalLocation = CAMERA_HORIZONTAL_LOCATION.get();
         cameraVerticalLocation = CAMERA_VERTICAL_LOCATION.get();
         cameraZoom = CAMERA_ZOOM.get();
-        lockOnRange = LOCK_ON_RANGE.get();
+        entityFocusingRange = ENTITY_FOCUSING_RANGE.get();
 
-		longPressCounter = LONG_PRESS_COUNTER.get();
-		autoSwitchCamera = AUTO_SWITCH_CAMERA.get();
-        lockOnQuickShift = LOCK_ON_QUICK_SHIFT.get();
+        holdingThreshold = HOLDING_THRESHOLD.get();
+        autoPerspectiveSwithing = AUTO_PERSPECTIVE_SWITCHING.get();
+        lockOnSnapping = LOCK_ON_SNAPPING.get();
 
-		keyConflictResolveScope = KEY_CONFLICT_RESOLVE_SCOPE.get();
-		preferenceWork = PREFERENCE_WORK.get();
+        canceledVanillaActions = CANCEL_VANILLA_ACTION.get();
+        playerBehaviorStrategy = PLAYER_BEHAVIOR_STRATEGY.get();
         cameraPerspectiveToggleMode = CAMERA_PERSPECTIVE_TOGGLE_MODE.get();
 
-		combatPreferredItems = COMBAT_PREFERRED_ITEMS.get().stream()
-				.map(itemName -> BuiltInRegistries.ITEM.get(ResourceLocation.parse(itemName)))
-				.collect(Collectors.toSet());
-		miningPreferredItems = MINING_PREFERRED_ITEMS.get().stream()
-				.map(itemName -> BuiltInRegistries.ITEM.get(ResourceLocation.parse(itemName)))
-				.collect(Collectors.toSet());
-		
-		showTargetIndicator = SHOW_TARGET_INDICATOR.get();
-		healthBarVisibility = HEALTH_BAR_VISIBILITY.get();
-		staminaBarX = STAMINA_BAR_X.get();
-		staminaBarY = STAMINA_BAR_Y.get();
-		staminaBarBaseX = STAMINA_BAR_BASE_X.get();
-		staminaBarBaseY = STAMINA_BAR_BASE_Y.get();
-		weaponInnateX = WEAPON_INNATE_X.get();
-		weaponInnateY = WEAPON_INNATE_Y.get();
-		weaponInnateBaseX = WEAPON_INNATE_BASE_X.get();
-		weaponInnateBaseY = WEAPON_INNATE_BASE_Y.get();
-		passiveX = PASSIVE_X.get();
-		passiveY = PASSIVE_Y.get();
-		passiveBaseX = PASSIVE_BASE_X.get();
-		passiveBaseY = PASSIVE_BASE_Y.get();
-		passiveAlignDirection = PASSIVE_ALIGN_DIRECTION.get();
-		chargingBarX = CHARGING_BAR_X.get();
-		chargingBarY = CHARGING_BAR_Y.get();
-		chargingBarBaseX = CHARGING_BAR_BASE_X.get();
-		chargingBarBaseY = CHARGING_BAR_BASE_Y.get();
-		
-		if (EpicFightServerConnectionHelper.init(event.getConfig().getFullPath().getParent().toString())) {
-			EpicFightMod.LOGGER.info("Epic Fight web server connection helper: supported");
-			
-    		try {
-    			// Try loading epic skins code dynamically
-    			Class<?> cls = Class.forName("yesman.epicfight.epicskins.user.AuthenticationHelperImpl");
+        combatCategorizedItems = COMBAT_CATEGORIZED_ITEMS.get().stream()
+                .map(itemName -> BuiltInRegistries.ITEM.get(ResourceLocation.parse(itemName)))
+                .collect(Collectors.toSet());
+        miningCategorizedItems = MINING_CATEGORIZED_ITEMS.get().stream()
+                .map(itemName -> BuiltInRegistries.ITEM.get(ResourceLocation.parse(itemName)))
+                .collect(Collectors.toSet());
+
+        showTargetIndicator = SHOW_TARGET_INDICATOR.get();
+        healthBarVisibility = HEALTH_BAR_VISIBILITY.get();
+        staminaBarX = STAMINA_BAR_X.get();
+        staminaBarY = STAMINA_BAR_Y.get();
+        staminaBarBaseX = STAMINA_BAR_BASE_X.get();
+        staminaBarBaseY = STAMINA_BAR_BASE_Y.get();
+        weaponInnateX = WEAPON_INNATE_X.get();
+        weaponInnateY = WEAPON_INNATE_Y.get();
+        weaponInnateBaseX = WEAPON_INNATE_BASE_X.get();
+        weaponInnateBaseY = WEAPON_INNATE_BASE_Y.get();
+        passiveX = PASSIVE_X.get();
+        passiveY = PASSIVE_Y.get();
+        passiveBaseX = PASSIVE_BASE_X.get();
+        passiveBaseY = PASSIVE_BASE_Y.get();
+        passiveAlignDirection = PASSIVE_ALIGN_DIRECTION.get();
+        chargingBarX = CHARGING_BAR_X.get();
+        chargingBarY = CHARGING_BAR_Y.get();
+        chargingBarBaseX = CHARGING_BAR_BASE_X.get();
+        chargingBarBaseY = CHARGING_BAR_BASE_Y.get();
+
+        if (EpicFightServerConnectionHelper.init(event.getConfig().getFullPath().getParent().toString())) {
+            EpicFightMod.LOGGER.info("Epic Fight web server connection helper: supported");
+
+            try {
+                // Try loading epic skins code dynamically
+                Class<?> cls = Class.forName("yesman.epicfight.epicskins.user.AuthenticationHelperImpl");
                 Constructor<?> authImpl = cls.getDeclaredConstructor();
                 authImpl.setAccessible(true);
                 Object o = authImpl.newInstance();
-    		} catch (Exception e) {
-    			EpicFightMod.LOGGER.info("Epic Fight web server status: Failed at initializing Authentication provider: " + e);
-    		}
-		} else {
-			EpicFightMod.LOGGER.info("Epic Fight web server connection helper: unsupported");
-		}
+            } catch (Exception e) {
+                EpicFightMod.LOGGER.info("Epic Fight web server status: Failed at initializing Authentication provider: " + e);
+            }
+        } else {
+            EpicFightMod.LOGGER.info("Epic Fight web server connection helper: unsupported");
+        }
 
-		if (EpicFightServerConnectionHelper.supported() && ClientEngine.getInstance().getAuthHelper().valid()) {
-			ClientEngine.getInstance().getAuthHelper().initialize(ACCESS_TOKEN, REFRESH_TOKNE, PROVIDER);
-		}
+        if (EpicFightServerConnectionHelper.supported() && ClientEngine.getInstance().getAuthHelper().valid()) {
+            ClientEngine.getInstance().getAuthHelper().initialize(ACCESS_TOKEN, REFRESH_TOKNE, PROVIDER);
+        }
     }
 
-    public static List<Runnable> getUnsaved() {
-        List<Runnable> saveWorks = new ArrayList<>();
+    /// Gathers unsaved configuration changes and enqueues work for each case the user save or discard changes
+    /// @param save      queued tasks when save changes
+    /// @param discard   queued tasks when discard changes
+    public static void checkUnsaved(List<Runnable> save, List<Runnable> discard) {
+        if (maxStuckProjectiles != MAX_STUCK_PROJECTILES.get()) {
+            save.add(() -> MAX_STUCK_PROJECTILES.set(maxStuckProjectiles));
+            discard.add(() -> maxStuckProjectiles = MAX_STUCK_PROJECTILES.get());
+        }
 
-        if (maxStuckProjectiles != MAX_STUCK_PROJECTILES.get())
-            saveWorks.add(() -> MAX_STUCK_PROJECTILES.set(maxStuckProjectiles));
+        if (targetOutlineColor != TARGET_OUTLINE_COLOR.get()) {
+            save.add(() -> {
+                TARGET_OUTLINE_COLOR.set(targetOutlineColor);
+                packedTargetOutlineColor = ColorDeterminator.positionToPackedRGBA(targetOutlineColor);
+            });
+            discard.add(() -> {
+                targetOutlineColor = TARGET_OUTLINE_COLOR.get();
+                packedTargetOutlineColor = ColorDeterminator.positionToPackedRGBA(targetOutlineColor);
+            });
+        }
 
-        if (targetOutlineColor != TARGET_OUTLINE_COLOR.get())
-            saveWorks.add(() -> {TARGET_OUTLINE_COLOR.set(targetOutlineColor); packedTargetOutlineColor = ColorSlider.rgbColor(targetOutlineColor);});
+        if (bloodEffects != BLOOD_EFFECTS.get()) {
+            save.add(() -> BLOOD_EFFECTS.set(bloodEffects));
+            discard.add(() -> bloodEffects = BLOOD_EFFECTS.get());
+        }
 
-        if (bloodEffects != BLOOD_EFFECTS.get())
-            saveWorks.add(() -> BLOOD_EFFECTS.set(bloodEffects));
+        if (showEpicFightAttributesInTooltip != SHOW_EPICFIGHT_ATTRIBUTES_IN_TOOLTIP.get()) {
+            save.add(() -> SHOW_EPICFIGHT_ATTRIBUTES_IN_TOOLTIP.set(showEpicFightAttributesInTooltip));
+            discard.add(() -> showEpicFightAttributesInTooltip = SHOW_EPICFIGHT_ATTRIBUTES_IN_TOOLTIP.get());
+        }
 
-        if (showEpicFightAttributesInTooltip != SHOW_EPICFIGHT_ATTRIBUTES_IN_TOOLTIP.get())
-            saveWorks.add(() -> SHOW_EPICFIGHT_ATTRIBUTES_IN_TOOLTIP.set(showEpicFightAttributesInTooltip));
+        if (activateComputeShader != ACTIVATE_COMPUTE_SHADER.get()) {
+            save.add(() -> ACTIVATE_COMPUTE_SHADER.set(activateComputeShader));
+            discard.add(() -> activateComputeShader = ACTIVATE_COMPUTE_SHADER.get());
+        }
 
-        if (activateComputeShader != ACTIVATE_COMPUTE_SHADER.get())
-            saveWorks.add(() -> ACTIVATE_COMPUTE_SHADER.set(activateComputeShader));
+        if (enableAnimatedFirstPersonModel != ENABLE_ANIMATED_FIRST_PERSON_MODEL.get()) {
+            save.add(() -> ENABLE_ANIMATED_FIRST_PERSON_MODEL.set(enableAnimatedFirstPersonModel));
+            discard.add(() -> enableAnimatedFirstPersonModel = ENABLE_ANIMATED_FIRST_PERSON_MODEL.get());
+        }
 
-        if (enableAnimatedFirstPersonModel != ENABLE_ANIMATED_FIRST_PERSON_MODEL.get())
-            saveWorks.add(() -> ENABLE_ANIMATED_FIRST_PERSON_MODEL.set(enableAnimatedFirstPersonModel));
+        //
+        if (mineBlockGuideOption != MINE_BLOCK_GUIDE_OPTION.get()) {
+            save.add(() -> MINE_BLOCK_GUIDE_OPTION.set(mineBlockGuideOption));
+            discard.add(() -> mineBlockGuideOption = MINE_BLOCK_GUIDE_OPTION.get());
+        }
 
-        if (mineBlockGuideOption != MINE_BLOCK_GUIDE_OPTION.get())
-            saveWorks.add(() -> MINE_BLOCK_GUIDE_OPTION.set(mineBlockGuideOption));
+        if (enableTargetEntityGuide != ENABLE_TARGET_ENTITY_GUIDE.get()) {
+            save.add(() -> ENABLE_TARGET_ENTITY_GUIDE.set(enableTargetEntityGuide));
+            discard.add(() -> enableTargetEntityGuide = ENABLE_TARGET_ENTITY_GUIDE.get());
+        }
 
-        if (enableTargetEntityGuide != ENABLE_TARGET_ENTITY_GUIDE.get())
-            saveWorks.add(() -> ENABLE_TARGET_ENTITY_GUIDE.set(enableTargetEntityGuide));
+        if (enableFirstPersonCameraMove != ENABLE_FIRST_PERSON_CAMERA_MOVE.get()) {
+            save.add(() -> ENABLE_FIRST_PERSON_CAMERA_MOVE.set(enableFirstPersonCameraMove));
+            discard.add(() -> enableFirstPersonCameraMove = ENABLE_FIRST_PERSON_CAMERA_MOVE.get());
+        }
 
-        if (enablePovAction != ENABLE_POV_ACTION.get())
-            saveWorks.add(() -> ENABLE_POV_ACTION.set(enablePovAction));
+        if (enableCosmetics != ENABLE_COSMETICS.get()) {
+            save.add(() -> ENABLE_COSMETICS.set(enableCosmetics));
+            discard.add(() -> enableCosmetics = ENABLE_COSMETICS.get());
+        }
 
-        if (enableCosmetics != ENABLE_COSMETICS.get())
-            saveWorks.add(() -> ENABLE_COSMETICS.set(enableCosmetics));
+        if (enableOriginalModel != ENABLE_PLAYER_VANILLA_MODEL.get()) {
+            save.add(() -> ENABLE_PLAYER_VANILLA_MODEL.set(enableOriginalModel));
+            discard.add(() -> enableOriginalModel = ENABLE_PLAYER_VANILLA_MODEL.get());
+        }
 
-        if (enableOriginalModel != ENABLE_PLAYER_VANILLA_MODEL.get())
-            saveWorks.add(() -> ENABLE_PLAYER_VANILLA_MODEL.set(enableOriginalModel));
+        if (tpsType != TPS_TYPE.get()) {
+            save.add(() -> TPS_TYPE.set(tpsType));
+            discard.add(() -> tpsType = TPS_TYPE.get());
+        }
 
-        if (cameraMode != CAMERA_MODE.get())
-            saveWorks.add(() -> CAMERA_MODE.set(cameraMode));
+        if (cameraHorizontalLocation != CAMERA_HORIZONTAL_LOCATION.get()) {
+            save.add(() -> CAMERA_HORIZONTAL_LOCATION.set(cameraHorizontalLocation));
+            discard.add(() -> cameraHorizontalLocation = CAMERA_HORIZONTAL_LOCATION.get());
+        }
 
-        if (cameraHorizontalLocation != CAMERA_HORIZONTAL_LOCATION.get())
-            saveWorks.add(() -> CAMERA_HORIZONTAL_LOCATION.set(cameraHorizontalLocation));
+        if (cameraVerticalLocation != CAMERA_VERTICAL_LOCATION.get()) {
+            save.add(() -> CAMERA_VERTICAL_LOCATION.set(cameraVerticalLocation));
+            discard.add(() -> cameraVerticalLocation = CAMERA_VERTICAL_LOCATION.get());
+        }
 
-        if (cameraVerticalLocation != CAMERA_VERTICAL_LOCATION.get())
-            saveWorks.add(() -> CAMERA_VERTICAL_LOCATION.set(cameraVerticalLocation));
+        if (cameraZoom != CAMERA_ZOOM.get()) {
+            save.add(() -> CAMERA_ZOOM.set(cameraZoom));
+            discard.add(() -> cameraZoom = CAMERA_ZOOM.get());
+        }
 
-        if (cameraZoom != CAMERA_ZOOM.get())
-            saveWorks.add(() -> CAMERA_ZOOM.set(cameraZoom));
+        if (holdingThreshold != HOLDING_THRESHOLD.get()) {
+            save.add(() -> HOLDING_THRESHOLD.set(holdingThreshold));
+            discard.add(() -> holdingThreshold = HOLDING_THRESHOLD.get());
+        }
 
-        if (lockOnRange != LOCK_ON_RANGE.get())
-            saveWorks.add(() -> LOCK_ON_RANGE.set(lockOnRange));
+        if (autoPerspectiveSwithing != AUTO_PERSPECTIVE_SWITCHING.get()) {
+            save.add(() -> AUTO_PERSPECTIVE_SWITCHING.set(autoPerspectiveSwithing));
+            discard.add(() -> autoPerspectiveSwithing = AUTO_PERSPECTIVE_SWITCHING.get());
+        }
 
-        if (longPressCounter != LONG_PRESS_COUNTER.get())
-            saveWorks.add(() -> LONG_PRESS_COUNTER.set(longPressCounter));
+        if (lockOnSnapping != LOCK_ON_SNAPPING.get()) {
+            save.add(() -> LOCK_ON_SNAPPING.set(lockOnSnapping));
+            discard.add(() -> lockOnSnapping = LOCK_ON_SNAPPING.get());
+        }
 
-        if (autoSwitchCamera != AUTO_SWITCH_CAMERA.get())
-            saveWorks.add(() -> AUTO_SWITCH_CAMERA.set(autoSwitchCamera));
+        if (canceledVanillaActions != CANCEL_VANILLA_ACTION.get()) {
+            save.add(() -> CANCEL_VANILLA_ACTION.set(canceledVanillaActions));
+            discard.add(() -> canceledVanillaActions = CANCEL_VANILLA_ACTION.get());
+        }
 
-        if (lockOnQuickShift != LOCK_ON_QUICK_SHIFT.get())
-            saveWorks.add(() -> LOCK_ON_QUICK_SHIFT.set(lockOnQuickShift));
+        if (playerBehaviorStrategy != PLAYER_BEHAVIOR_STRATEGY.get()) {
+            save.add(() -> PLAYER_BEHAVIOR_STRATEGY.set(playerBehaviorStrategy));
+            discard.add(() -> playerBehaviorStrategy = PLAYER_BEHAVIOR_STRATEGY.get());
+        }
 
-        if (keyConflictResolveScope != KEY_CONFLICT_RESOLVE_SCOPE.get())
-            saveWorks.add(() -> KEY_CONFLICT_RESOLVE_SCOPE.set(keyConflictResolveScope));
-
-        if (preferenceWork != PREFERENCE_WORK.get())
-            saveWorks.add(() -> PREFERENCE_WORK.set(preferenceWork));
-
-        if (!combatPreferredItems.equals(
-            COMBAT_PREFERRED_ITEMS.get().stream()
+        if (!combatCategorizedItems.equals(
+            COMBAT_CATEGORIZED_ITEMS.get().stream()
                 .map(itemName -> BuiltInRegistries.ITEM.get(ResourceLocation.parse(itemName)))
                 .collect(Collectors.toSet())
         )
         ) {
-            saveWorks.add(() -> COMBAT_PREFERRED_ITEMS.set(combatPreferredItems.stream().map((item) -> BuiltInRegistries.ITEM.getKey(item).toString()).collect(Collectors.toList())));
+            save.add(() -> COMBAT_CATEGORIZED_ITEMS.set(combatCategorizedItems.stream().map(item -> BuiltInRegistries.ITEM.getKey(item).toString()).toList()));
+            discard.add(() -> {
+                combatCategorizedItems.clear();
+                combatCategorizedItems.addAll(COMBAT_CATEGORIZED_ITEMS.get().stream().map(itemStr -> BuiltInRegistries.ITEM.get(ResourceLocation.parse(itemStr))).toList());
+            });
         }
 
         if (
-            !miningPreferredItems.equals(
-                MINING_PREFERRED_ITEMS.get().stream()
+            !miningCategorizedItems.equals(
+                MINING_CATEGORIZED_ITEMS.get().stream()
                     .map(itemName -> BuiltInRegistries.ITEM.get(ResourceLocation.parse(itemName)))
                     .collect(Collectors.toSet())
             )
         ) {
-            saveWorks.add(() -> MINING_PREFERRED_ITEMS.set(miningPreferredItems.stream().map((item) -> BuiltInRegistries.ITEM.getKey(item).toString()).collect(Collectors.toList())));
+            save.add(() -> MINING_CATEGORIZED_ITEMS.set(miningCategorizedItems.stream().map(item -> BuiltInRegistries.ITEM.getKey(item).toString()).toList()));
+            discard.add(() -> {
+                miningCategorizedItems.clear();
+                miningCategorizedItems.addAll(MINING_CATEGORIZED_ITEMS.get().stream().map(itemStr -> BuiltInRegistries.ITEM.get(ResourceLocation.parse(itemStr))).toList());
+            });
         }
 
-        if (showTargetIndicator != SHOW_TARGET_INDICATOR.get())
-            saveWorks.add(() -> SHOW_TARGET_INDICATOR.set(showTargetIndicator));
+        if (showTargetIndicator != SHOW_TARGET_INDICATOR.get()) {
+            save.add(() -> SHOW_TARGET_INDICATOR.set(showTargetIndicator));
+            discard.add(() -> showTargetIndicator = SHOW_TARGET_INDICATOR.get());
+        }
 
-        if (healthBarVisibility != HEALTH_BAR_VISIBILITY.get())
-            saveWorks.add(() -> HEALTH_BAR_VISIBILITY.set(healthBarVisibility));
+        if (healthBarVisibility != HEALTH_BAR_VISIBILITY.get()) {
+            save.add(() -> HEALTH_BAR_VISIBILITY.set(healthBarVisibility));
+            discard.add(() -> healthBarVisibility = HEALTH_BAR_VISIBILITY.get());
+        }
 
-        if (staminaBarX != STAMINA_BAR_X.get())
-            saveWorks.add(() -> STAMINA_BAR_X.set(staminaBarX));
+        if (staminaBarX != STAMINA_BAR_X.get()) {
+            save.add(() -> STAMINA_BAR_X.set(staminaBarX));
+            discard.add(() -> staminaBarX = STAMINA_BAR_X.get());
+        }
 
-        if (staminaBarY != STAMINA_BAR_Y.get())
-            saveWorks.add(() -> STAMINA_BAR_Y.set(staminaBarY));
+        if (staminaBarY != STAMINA_BAR_Y.get()) {
+            save.add(() -> STAMINA_BAR_Y.set(staminaBarY));
+            discard.add(() -> staminaBarY = STAMINA_BAR_Y.get());
+        }
 
-        if (staminaBarBaseX != STAMINA_BAR_BASE_X.get())
-            saveWorks.add(() -> STAMINA_BAR_BASE_X.set(staminaBarBaseX));
+        if (staminaBarBaseX != STAMINA_BAR_BASE_X.get()) {
+            save.add(() -> STAMINA_BAR_BASE_X.set(staminaBarBaseX));
+            discard.add(() -> staminaBarBaseX = STAMINA_BAR_BASE_X.get());
+        }
 
-        if (staminaBarBaseY != STAMINA_BAR_BASE_Y.get())
-            saveWorks.add(() -> STAMINA_BAR_BASE_Y.set(staminaBarBaseY));
+        if (staminaBarBaseY != STAMINA_BAR_BASE_Y.get()) {
+            save.add(() -> STAMINA_BAR_BASE_Y.set(staminaBarBaseY));
+            discard.add(() -> staminaBarBaseY = STAMINA_BAR_BASE_Y.get());
+        }
 
-        if (weaponInnateX != WEAPON_INNATE_X.get())
-            saveWorks.add(() -> WEAPON_INNATE_X.set(weaponInnateX));
+        if (weaponInnateX != WEAPON_INNATE_X.get()) {
+            save.add(() -> WEAPON_INNATE_X.set(weaponInnateX));
+            discard.add(() -> weaponInnateX = WEAPON_INNATE_X.get());
+        }
 
-        if (weaponInnateX != WEAPON_INNATE_Y.get())
-            saveWorks.add(() -> WEAPON_INNATE_Y.set(weaponInnateY));
+        if (weaponInnateY != WEAPON_INNATE_Y.get()) {
+            save.add(() -> WEAPON_INNATE_Y.set(weaponInnateY));
+            discard.add(() -> weaponInnateY = WEAPON_INNATE_Y.get());
+        }
 
-        if (weaponInnateBaseX != WEAPON_INNATE_BASE_X.get())
-            saveWorks.add(() -> WEAPON_INNATE_BASE_X.set(weaponInnateBaseX));
+        if (weaponInnateBaseX != WEAPON_INNATE_BASE_X.get()) {
+            save.add(() -> WEAPON_INNATE_BASE_X.set(weaponInnateBaseX));
+            discard.add(() -> weaponInnateBaseX = WEAPON_INNATE_BASE_X.get());
+        }
 
-        if (weaponInnateBaseY != WEAPON_INNATE_BASE_Y.get())
-            saveWorks.add(() -> WEAPON_INNATE_BASE_Y.set(weaponInnateBaseY));
+        if (weaponInnateBaseY != WEAPON_INNATE_BASE_Y.get()) {
+            save.add(() -> WEAPON_INNATE_BASE_Y.set(weaponInnateBaseY));
+            discard.add(() -> weaponInnateBaseY = WEAPON_INNATE_BASE_Y.get());
+        }
 
-        if (passiveX != PASSIVE_X.get())
-            saveWorks.add(() -> PASSIVE_X.set(passiveX));
+        if (passiveX != PASSIVE_X.get()) {
+            save.add(() -> PASSIVE_X.set(passiveX));
+            discard.add(() -> passiveX = PASSIVE_X.get());
+        }
 
-        if (passiveY != PASSIVE_Y.get())
-            saveWorks.add(() -> PASSIVE_Y.set(passiveY));
+        if (passiveY != PASSIVE_Y.get()) {
+            save.add(() -> PASSIVE_Y.set(passiveY));
+            discard.add(() -> passiveY = PASSIVE_Y.get());
+        }
 
-        if (passiveBaseX != PASSIVE_BASE_X.get())
-            saveWorks.add(() -> PASSIVE_BASE_X.set(passiveBaseX));
+        if (passiveBaseX != PASSIVE_BASE_X.get()) {
+            save.add(() -> PASSIVE_BASE_X.set(passiveBaseX));
+            discard.add(() -> passiveBaseX = PASSIVE_BASE_X.get());
+        }
 
-        if (passiveBaseY != PASSIVE_BASE_Y.get())
-            saveWorks.add(() -> PASSIVE_BASE_Y.set(passiveBaseY));
+        if (passiveBaseY != PASSIVE_BASE_Y.get()) {
+            save.add(() -> PASSIVE_BASE_Y.set(passiveBaseY));
+            discard.add(() -> passiveBaseY = PASSIVE_BASE_Y.get());
+        }
 
-        if (passiveAlignDirection != PASSIVE_ALIGN_DIRECTION.get())
-            saveWorks.add(() -> PASSIVE_ALIGN_DIRECTION.set(passiveAlignDirection));
+        if (passiveAlignDirection != PASSIVE_ALIGN_DIRECTION.get()) {
+            save.add(() -> PASSIVE_ALIGN_DIRECTION.set(passiveAlignDirection));
+            discard.add(() -> passiveAlignDirection = PASSIVE_ALIGN_DIRECTION.get());
+        }
 
-        if (chargingBarX != CHARGING_BAR_X.get())
-            saveWorks.add(() -> CHARGING_BAR_X.set(chargingBarX));
+        if (chargingBarX != CHARGING_BAR_X.get()) {
+            save.add(() -> CHARGING_BAR_X.set(chargingBarX));
+            discard.add(() -> chargingBarX = CHARGING_BAR_X.get());
+        }
 
-        if (chargingBarY != CHARGING_BAR_Y.get())
-            saveWorks.add(() -> CHARGING_BAR_Y.set(chargingBarY));
+        if (chargingBarY != CHARGING_BAR_Y.get()) {
+            save.add(() -> CHARGING_BAR_Y.set(chargingBarY));
+            discard.add(() -> chargingBarY = CHARGING_BAR_Y.get());
+        }
 
-        if (chargingBarBaseX != CHARGING_BAR_BASE_X.get())
-            saveWorks.add(() -> CHARGING_BAR_BASE_X.set(chargingBarBaseX));
+        if (chargingBarBaseX != CHARGING_BAR_BASE_X.get()) {
+            save.add(() -> CHARGING_BAR_BASE_X.set(chargingBarBaseX));
+            discard.add(() -> chargingBarBaseX = CHARGING_BAR_BASE_X.get());
+        }
 
-        if (chargingBarBaseY != CHARGING_BAR_BASE_Y.get())
-            saveWorks.add(() -> CHARGING_BAR_BASE_Y.set(chargingBarBaseY));
-
-        return saveWorks;
+        if (chargingBarBaseY != CHARGING_BAR_BASE_Y.get()) {
+            save.add(() -> CHARGING_BAR_BASE_Y.set(chargingBarBaseY));
+            discard.add(() -> chargingBarBaseY = CHARGING_BAR_BASE_Y.get());
+        }
     }
 
-	public static void saveChanges() {
-        if (maxStuckProjectiles != MAX_STUCK_PROJECTILES.get()) MAX_STUCK_PROJECTILES.set(maxStuckProjectiles);
-        if (targetOutlineColor != TARGET_OUTLINE_COLOR.get()) { TARGET_OUTLINE_COLOR.set(targetOutlineColor); packedTargetOutlineColor = ColorSlider.rgbColor(targetOutlineColor); }
-        if (bloodEffects != BLOOD_EFFECTS.get()) BLOOD_EFFECTS.set(bloodEffects);
-        if (showEpicFightAttributesInTooltip != SHOW_EPICFIGHT_ATTRIBUTES_IN_TOOLTIP.get()) SHOW_EPICFIGHT_ATTRIBUTES_IN_TOOLTIP.set(showEpicFightAttributesInTooltip);
-        if (activateComputeShader != ACTIVATE_COMPUTE_SHADER.get()) ACTIVATE_COMPUTE_SHADER.set(activateComputeShader);
-        if (enableAnimatedFirstPersonModel != ENABLE_ANIMATED_FIRST_PERSON_MODEL.get()) ENABLE_ANIMATED_FIRST_PERSON_MODEL.set(enableAnimatedFirstPersonModel);
-        if (mineBlockGuideOption != MINE_BLOCK_GUIDE_OPTION.get()) MINE_BLOCK_GUIDE_OPTION.set(mineBlockGuideOption);
-        if (enableTargetEntityGuide != ENABLE_TARGET_ENTITY_GUIDE.get()) ENABLE_TARGET_ENTITY_GUIDE.set(enableTargetEntityGuide);
-        if (enablePovAction != ENABLE_POV_ACTION.get()) ENABLE_POV_ACTION.set(enablePovAction);
-        if (enableCosmetics != ENABLE_COSMETICS.get()) ENABLE_COSMETICS.set(enableCosmetics);
-        if (enableOriginalModel != ENABLE_PLAYER_VANILLA_MODEL.get()) ENABLE_PLAYER_VANILLA_MODEL.set(enableOriginalModel);
-        if (cameraMode != CAMERA_MODE.get()) CAMERA_MODE.set(cameraMode);
-        if (cameraHorizontalLocation != CAMERA_HORIZONTAL_LOCATION.get()) CAMERA_HORIZONTAL_LOCATION.set(cameraHorizontalLocation);
-        if (cameraVerticalLocation != CAMERA_VERTICAL_LOCATION.get()) CAMERA_VERTICAL_LOCATION.set(cameraVerticalLocation);
-        if (cameraZoom != CAMERA_ZOOM.get()) CAMERA_ZOOM.set(cameraZoom);
-        if (lockOnRange != LOCK_ON_RANGE.get()) LOCK_ON_RANGE.set(lockOnRange);
-        if (longPressCounter != LONG_PRESS_COUNTER.get()) LONG_PRESS_COUNTER.set(longPressCounter);
-        if (autoSwitchCamera != AUTO_SWITCH_CAMERA.get()) AUTO_SWITCH_CAMERA.set(autoSwitchCamera);
-        if (lockOnQuickShift != LOCK_ON_QUICK_SHIFT.get()) LOCK_ON_QUICK_SHIFT.set(lockOnQuickShift);
-        if (keyConflictResolveScope != KEY_CONFLICT_RESOLVE_SCOPE.get()) KEY_CONFLICT_RESOLVE_SCOPE.set(keyConflictResolveScope);
-        if (preferenceWork != PREFERENCE_WORK.get()) PREFERENCE_WORK.set(preferenceWork);
-        if (cameraPerspectiveToggleMode != CAMERA_PERSPECTIVE_TOGGLE_MODE.get()) { CAMERA_PERSPECTIVE_TOGGLE_MODE.set(cameraPerspectiveToggleMode); CAMERA_PERSPECTIVE_TOGGLE_MODE.save(); }
-        if (!combatPreferredItems.equals(COMBAT_PREFERRED_ITEMS.get().stream()
-				.map(itemName -> BuiltInRegistries.ITEM.get(ResourceLocation.parse(itemName)))
-				.collect(Collectors.toSet()))
-		) {
-			COMBAT_PREFERRED_ITEMS.set(combatPreferredItems.stream().map((item) -> BuiltInRegistries.ITEM.getKey(item).toString()).collect(Collectors.toList()));
-			COMBAT_PREFERRED_ITEMS.save();
-		}
-		if (!miningPreferredItems.equals(MINING_PREFERRED_ITEMS.get().stream()
-				.map(itemName -> BuiltInRegistries.ITEM.get(ResourceLocation.parse(itemName)))
-				.collect(Collectors.toSet()))
-		) {
-			MINING_PREFERRED_ITEMS.set(miningPreferredItems.stream().map((item) -> BuiltInRegistries.ITEM.getKey(item).toString()).collect(Collectors.toList()));
-			MINING_PREFERRED_ITEMS.save();
-		}
-		
-		if (showTargetIndicator != SHOW_TARGET_INDICATOR.get()) { SHOW_TARGET_INDICATOR.set(showTargetIndicator); SHOW_TARGET_INDICATOR.save(); }
-		if (healthBarVisibility != HEALTH_BAR_VISIBILITY.get()) { HEALTH_BAR_VISIBILITY.set(healthBarVisibility); HEALTH_BAR_VISIBILITY.save(); }
-		if (staminaBarX != STAMINA_BAR_X.get()) { STAMINA_BAR_X.set(staminaBarX); STAMINA_BAR_X.save(); }
-		if (staminaBarY != STAMINA_BAR_Y.get()) { STAMINA_BAR_Y.set(staminaBarY); STAMINA_BAR_Y.save(); }
-		if (staminaBarBaseX != STAMINA_BAR_BASE_X.get()) { STAMINA_BAR_BASE_X.set(staminaBarBaseX); STAMINA_BAR_BASE_X.save(); }
-		if (staminaBarBaseY != STAMINA_BAR_BASE_Y.get()) { STAMINA_BAR_BASE_Y.set(staminaBarBaseY); STAMINA_BAR_BASE_Y.save(); }
-		if (weaponInnateX != WEAPON_INNATE_X.get()) { WEAPON_INNATE_X.set(weaponInnateX); WEAPON_INNATE_X.save(); }
-		if (weaponInnateX != WEAPON_INNATE_Y.get()) { WEAPON_INNATE_Y.set(weaponInnateY); WEAPON_INNATE_Y.save(); }
-		if (weaponInnateBaseX != WEAPON_INNATE_BASE_X.get()) { WEAPON_INNATE_BASE_X.set(weaponInnateBaseX); WEAPON_INNATE_BASE_X.save(); }
-		if (weaponInnateBaseY != WEAPON_INNATE_BASE_Y.get()) { WEAPON_INNATE_BASE_Y.set(weaponInnateBaseY); WEAPON_INNATE_BASE_Y.save(); }
-		if (passiveX != PASSIVE_X.get()) { PASSIVE_X.set(passiveX); PASSIVE_X.save(); }
-		if (passiveY != PASSIVE_Y.get()) { PASSIVE_Y.set(passiveY); PASSIVE_Y.save(); }
-		if (passiveBaseX != PASSIVE_BASE_X.get()) { PASSIVE_BASE_X.set(passiveBaseX); PASSIVE_BASE_X.save(); }
-		if (passiveBaseY != PASSIVE_BASE_Y.get()) { PASSIVE_BASE_Y.set(passiveBaseY); PASSIVE_BASE_Y.save(); }
-		if (passiveAlignDirection != PASSIVE_ALIGN_DIRECTION.get()) { PASSIVE_ALIGN_DIRECTION.set(passiveAlignDirection); PASSIVE_ALIGN_DIRECTION.save(); }
-		if (chargingBarX != CHARGING_BAR_X.get()) { CHARGING_BAR_X.set(chargingBarX); CHARGING_BAR_X.save(); }
-		if (chargingBarY != CHARGING_BAR_Y.get()) { CHARGING_BAR_Y.set(chargingBarY); CHARGING_BAR_Y.save(); }
-		if (chargingBarBaseX != CHARGING_BAR_BASE_X.get()) { CHARGING_BAR_BASE_X.set(chargingBarBaseX); CHARGING_BAR_BASE_X.save(); }
-		if (chargingBarBaseY != CHARGING_BAR_BASE_Y.get()) { CHARGING_BAR_BASE_Y.set(chargingBarBaseY); CHARGING_BAR_BASE_Y.save(); }
-	}
-	
-	public static Vec2i getStaminaPosition() {
-		int posX = staminaBarBaseX.positionGetter.apply(Minecraft.getInstance().getWindow().getGuiScaledWidth(), staminaBarX);
-		int posY = staminaBarBaseY.positionGetter.apply(Minecraft.getInstance().getWindow().getGuiScaledHeight(), staminaBarY);
-		return new Vec2i(posX, posY);
-	}
-	
-	public static Vec2i getWeaponInnatePosition() {
-		int posX = weaponInnateBaseX.positionGetter.apply(Minecraft.getInstance().getWindow().getGuiScaledWidth(), weaponInnateX);
-		int posY = weaponInnateBaseY.positionGetter.apply(Minecraft.getInstance().getWindow().getGuiScaledHeight(), weaponInnateY);
-		return new Vec2i(posX, posY);
-	}
-	
-	public static Vec2i getChargingBarPosition() {
-		int posX = chargingBarBaseX.positionGetter.apply(Minecraft.getInstance().getWindow().getGuiScaledWidth(), chargingBarX);
-		int posY = chargingBarBaseY.positionGetter.apply(Minecraft.getInstance().getWindow().getGuiScaledHeight(), chargingBarY);
-		return new Vec2i(posX, posY);
-	}
-	
-	/**
-	 * Determines which entities should show the health bar
-	 * <p>
-	 * NONE: none of entities show the health bar
-	 * HURT: entities whose health is lower than max health show the health bar
-	 * TARGET: an entity that the player is targeting shows the health bar
-	 * TARGET_AND_HURT: entities that meet both the HURT and TARGET conditions show the health bar
-	 */
-	@OnlyIn(Dist.CLIENT)
-	public enum HealthBarVisibility implements CirculatableEnum<HealthBarVisibility>, StringRepresentable {
-		NONE, HURT, TARGET, TARGET_AND_HURT;
-		
-		@Override
-		public HealthBarVisibility nextEnum() {
-			return HealthBarVisibility.values()[(this.ordinal() + 1) % 4];
-		}
+    public static Vec2i getStaminaPosition() {
+        int posX = staminaBarBaseX.positionGetter.apply(Minecraft.getInstance().getWindow().getGuiScaledWidth(), staminaBarX);
+        int posY = staminaBarBaseY.positionGetter.apply(Minecraft.getInstance().getWindow().getGuiScaledHeight(), staminaBarY);
+        return new Vec2i(posX, posY);
+    }
 
-		@Override
-		public String getSerializedName() {
-			return ParseUtil.toLowerCase(this.name());
-		}
-	}
-	
-	/**
-	 * Determines which indicators are activated for block mining guide
-	 * <p>
-	 * NONE: nothing
-	 * CROSSHAIR : crosshair changes when player looks at the block with mining preferred item
-	 * HIGHLIGHT : block flashes white when player looks at the block with mining preferred item
-	 * CROSSHAIR_AND_HIGHLIGHT : both
-	 */
-	@OnlyIn(Dist.CLIENT)
-	public enum BlockGuideOptions implements CirculatableEnum<BlockGuideOptions>, StringRepresentable {
-		NONE(false, false), CROSSHAIR(true, false), HIGHLIGHT(false, true), CROSSHAIR_AND_HIGHLIGHT(true, true);
-		
-		final boolean showCrosshair;
+    public static Vec2i getWeaponInnatePosition() {
+        int posX = weaponInnateBaseX.positionGetter.apply(Minecraft.getInstance().getWindow().getGuiScaledWidth(), weaponInnateX);
+        int posY = weaponInnateBaseY.positionGetter.apply(Minecraft.getInstance().getWindow().getGuiScaledHeight(), weaponInnateY);
+        return new Vec2i(posX, posY);
+    }
+
+    public static Vec2i getChargingBarPosition() {
+        int posX = chargingBarBaseX.positionGetter.apply(Minecraft.getInstance().getWindow().getGuiScaledWidth(), chargingBarX);
+        int posY = chargingBarBaseY.positionGetter.apply(Minecraft.getInstance().getWindow().getGuiScaledHeight(), chargingBarY);
+        return new Vec2i(posX, posY);
+    }
+
+    /// Determines which entities should show the health bar
+    public enum HealthBarVisibility implements CirculatableEnum<HealthBarVisibility>, StringRepresentable {
+        /// None of entities will show the health bar
+        NONE(GUI_WIDGET_SETTINGS_UI_HEALTH_BAR_NONE),
+
+        /// Entities whose health is lower than max health show the health bar
+        HURT(GUI_WIDGET_SETTINGS_UI_HEALTH_BAR_HURT),
+
+        /// An entity that the player is targeting currently will show the health bar
+        TARGET(GUI_WIDGET_SETTINGS_UI_HEALTH_BAR_TARGET),
+
+        /// Both hurt and targeted entities will show the health bar
+        TARGET_AND_HURT(GUI_WIDGET_SETTINGS_UI_HEALTH_BAR_TARGET_AND_HURT);
+
+        final Component translatable;
+
+        HealthBarVisibility(String translationKey) {
+            this.translatable = Component.translatable(translationKey);
+        }
+
+        @Override
+        public HealthBarVisibility nextEnum() {
+            return HealthBarVisibility.values()[(this.ordinal() + 1) % 4];
+        }
+
+        @Override
+        public String getSerializedName() {
+            return this.translatable.getString();
+        }
+    }
+
+    /// Determines which indicators are activated for block mining guide
+    public enum BlockGuideOptions implements CirculatableEnum<BlockGuideOptions>, StringRepresentable {
+        /// Changes nothign
+        NONE(false, false, GUI_WIDGET_SETTINGS_UI_MINE_BLOCK_GUIDE_NONE),
+
+        /// Crosshair changes when player looks at the block with mining preferred item
+        CROSSHAIR(true, false, GUI_WIDGET_SETTINGS_UI_MINE_BLOCK_GUIDE_CROSSHAIR),
+
+        /// Block flashes white when player looks at the block with mining preferred item
+        HIGHLIGHT(false, true, GUI_WIDGET_SETTINGS_UI_MINE_BLOCK_GUIDE_HIGHLIGHT),
+
+        /// Both crosshair and block highlight will be appeared
+        CROSSHAIR_AND_HIGHLIGHT(true, true, GUI_WIDGET_SETTINGS_UI_MINE_BLOCK_GUIDE_CROSSHAIR_AND_HIGHLIGHT);
+
+        final boolean showCrosshair;
         final boolean showBlockHighlight;
-		
-		BlockGuideOptions(boolean showCrosshair, boolean showBlockHighlight) {
-			this.showCrosshair = showCrosshair;
-			this.showBlockHighlight = showBlockHighlight;
-		}
-		
-		public boolean switchCrosshair() {
-			return this.showCrosshair;
-		}
-		
-		public boolean showBlockHighlight() {
-			return this.showBlockHighlight;
-		}
-		
-		@Override
-		public BlockGuideOptions nextEnum() {
-			return BlockGuideOptions.values()[(this.ordinal() + 1) % 4];
-		}
-		
-		@Override
-		public String getSerializedName() {
-			return ParseUtil.toLowerCase(this.name());
-		}
-	}
-	
-	/**
-	 * The scope of vanilla actions that will be canceled when they conflict with Epic Fight keybinds (currently, it only supports mouse right button)
-	 * <p>
-	 * NONE: nothing
-	 * BLOCK_INTERACTION : cancel block interactions (like furnace, crafting table)
-	 * ITEM_INTERACTION : cancel item interactions (like plowing using a hoe)
-	 * BLOCK_AND_ITEM_INTERACTION : both
-	 */
-	@OnlyIn(Dist.CLIENT)
-	public enum KeyConflictResolveScope implements CirculatableEnum<KeyConflictResolveScope>, StringRepresentable {
-		NONE(false, false), INTERACTION(true, false), ITEM_USE(false, true), INTERACTION_AND_ITEMUSE(true, true);
+        final Component translatable;
+
+        BlockGuideOptions(boolean showCrosshair, boolean showBlockHighlight, String translationKey) {
+            this.showCrosshair = showCrosshair;
+            this.showBlockHighlight = showBlockHighlight;
+            this.translatable = Component.translatable(translationKey);
+        }
+
+        public boolean switchCrosshair() {
+            return this.showCrosshair;
+        }
+
+        public boolean showBlockHighlight() {
+            return this.showBlockHighlight;
+        }
+
+        @Override
+        public BlockGuideOptions nextEnum() {
+            return BlockGuideOptions.values()[(this.ordinal() + 1) % 4];
+        }
+
+        @Override
+        public String getSerializedName() {
+            return this.translatable.getString();
+        }
+    }
+
+    /// The scope of vanilla actions that will be canceled when they conflict with Epic Fight keybinds (currently, it only supports mouse right button)
+    public enum CanceledVanillaActions implements CirculatableEnum<CanceledVanillaActions>, StringRepresentable {
+        /// Won't cancel any vanilla behavior
+        NONE(false, false, GUI_WIDGET_SETTINGS_CONTROLS_CANCELED_VANILLA_ACTIONS_NONE),
+
+        /// Cancel block interactions (e.g. opening UI screen for Furnace, Crafting Table)
+        INTERACTION(true, false, GUI_WIDGET_SETTINGS_CONTROLS_CANCELED_VANILLA_ACTIONS_INTERACTION),
+
+        /// Cancel item interactions (like plowing dirt using a hoe)
+        ITEM_USE(false, true, GUI_WIDGET_SETTINGS_CONTROLS_CANCELED_VANILLA_ACTIONS_ITEM_USE),
+
+        /// Cancel both block and item interactions
+        INTERACTION_AND_ITEM_USE(true, true, GUI_WIDGET_SETTINGS_CONTROLS_CANCELED_VANILLA_ACTIONS_INTERACTION_AND_ITEM_USE);
 
         final boolean cancelInteraction;
         final boolean cancelItemUse;
-		
-		KeyConflictResolveScope(boolean cancelBlockInteraction, boolean cancelItemInteraction) {
-			this.cancelInteraction = cancelBlockInteraction;
-			this.cancelItemUse = cancelItemInteraction;
-		}
-		
-		public boolean cancelInteraction() {
-			return this.cancelInteraction;
-		}
-		
-		public boolean cancelItemUse() {
-			return this.cancelItemUse;
-		}
-		
-		@Override
-		public KeyConflictResolveScope nextEnum() {
-			return KeyConflictResolveScope.values()[(this.ordinal() + 1) % 4];
-		}
-		
-		@Override
-		public String getSerializedName() {
-			return ParseUtil.toLowerCase(this.name());
-		}
-	}
-	
-	/**
-	 * Determines how item preference works
-	 * <p>
-	 * ADAPTIVE: Decides the next action based on crosshair hit result and target
-	 * SWITCH_MODE: Switches the player mode to each categorized preference, forcing the player to do only mine or attack.
-	 */
-	@OnlyIn(Dist.CLIENT)
-	public enum PreferenceWork implements CirculatableEnum<PreferenceWork>, StringRepresentable {
-		ADAPTIVE(true), SWITCH_MODE(false);
+        final Component translatable;
+
+        CanceledVanillaActions(boolean cancelBlockInteraction, boolean cancelItemInteraction, String translationKey) {
+            this.cancelInteraction = cancelBlockInteraction;
+            this.cancelItemUse = cancelItemInteraction;
+            this.translatable = Component.translatable(translationKey);
+        }
+
+        public boolean cancelInteraction() {
+            return this.cancelInteraction;
+        }
+
+        public boolean cancelItemUse() {
+            return this.cancelItemUse;
+        }
+
+        @Override
+        public CanceledVanillaActions nextEnum() {
+            return CanceledVanillaActions.values()[(this.ordinal() + 1) % 4];
+        }
+
+        @Override
+        public String getSerializedName() {
+            return this.translatable.getString();
+        }
+    }
+
+    /// Determines how item preference works
+    public enum PlayerBehaviorStrategy implements CirculatableEnum<PlayerBehaviorStrategy>, StringRepresentable {
+        /// Determines the next action based on crosshair hit result
+        ADAPTIVE(true, GUI_WIDGET_SETTINGS_CONTROLS_PLAYER_BAHAVIOR_STRATEGY_ADAPTIVE),
+
+        /// Switches the player mode to each categorized preference, forcing the player to do only mine or attack.
+        SWITCHING_MODE(false, GUI_WIDGET_SETTINGS_CONTROLS_PLAYER_BAHAVIOR_STRATEGY_SWITCHING_MODE);
 
         final boolean checkHitResult;
-		
-		PreferenceWork(boolean checkHitResult) {
-			this.checkHitResult = checkHitResult;
-		}
-		
-		public boolean checkHitResult() {
-			return this.checkHitResult;
-		}
-		
-		@Override
-		public String getSerializedName() {
-			return ParseUtil.toLowerCase(this.name());
-		}
-		
-		@Override
-		public PreferenceWork nextEnum() {
-			return PreferenceWork.values()[(this.ordinal() + 1) % 2];
-		}
-	}
+        final Component translatable;
 
-    /**
-     * Defines how the camera perspective toggles when pressing toggle perspective (i.e., F5).
-     */
+        PlayerBehaviorStrategy(boolean checkHitResult, String translationKey) {
+            this.checkHitResult = checkHitResult;
+            this.translatable = Component.translatable(translationKey);
+        }
+
+        public boolean checkHitResult() {
+            return this.checkHitResult;
+        }
+
+        @Override
+        public String getSerializedName() {
+            return this.translatable.getString();
+        }
+
+        @Override
+        public PlayerBehaviorStrategy nextEnum() {
+            return PlayerBehaviorStrategy.values()[(this.ordinal() + 1) % 2];
+        }
+    }
+
+    /// Defines how the camera perspective toggles when pressing toggle perspective (i.e., F5).
     public enum CameraPerspectiveToggleMode implements CirculatableEnum<CameraPerspectiveToggleMode>, StringRepresentable {
-        /**
-         * Uses Minecraft's default behavior.
-         * <p>
-         * Cycles through all available perspectives, including any added by third-party mods.
-         * This does not change the existing vanilla behavior.
-         */
-        VANILLA,
-        /**
-         * Skips the third-person front perspective only.
-         * <p>
-         * Other perspectives remain available and are not ignored.
-         */
-        SKIP_THIRD_PERSON_FRONT;
+        /// Uses Minecraft's default behavior.
+        ///
+        /// Cycles through all available perspectives, including any added by third-party mods.
+        /// This does not change the existing vanilla behavior.
+        VANILLA(GUI_WIDGET_SETTINGS_CAMERA_PERSPECTIVE_TOGGLE_MODE_VANILLA),
+
+        /// Skips the third-person front perspective only.
+        ///
+        /// Other perspectives remain available and are not ignored.
+        SKIP_THIRD_PERSON_FRONT(GUI_WIDGET_SETTINGS_CAMERA_PERSPECTIVE_TOGGLE_MODE_SKIP_THIRD_PERSON_FRONT);
+
+        final Component translatable;
+
+        CameraPerspectiveToggleMode(String translationKey) {
+            this.translatable = Component.translatable(translationKey);
+        }
 
         @Override
         public CameraPerspectiveToggleMode nextEnum() {
@@ -649,27 +698,29 @@ public class ClientConfig {
 
         @Override
         public @NotNull String getSerializedName() {
-            return ParseUtil.toLowerCase(this.name());
+            return this.translatable.getString();
         }
     }
 
-    /**
-     * Determines when camera should transite to TPS perspective in third-person
-     * <p>
-     * ALWAYS_BACK: always locates the camera in player's back like vanilla
-     * WHEN_AIMING : activate tps perspective when player aims
-     * ALWAYS : always activate tps perspective
-     */
-    @OnlyIn(Dist.CLIENT)
-    public enum TPSType implements CirculatableEnum<TPSType>, StringRepresentable {
-        ALWAYS_BACK(false, null), WHEN_AIMING(true, EpicFightCameraAPI::isZooming), ALWAYS(true, cameraApi -> true);
+    /// Determines when camera should transite to TPS perspective in third-person
+    public enum TPSActivationType implements CirculatableEnum<TPSActivationType>, StringRepresentable {
+        /// always locates the camera in player's back like vanilla
+        DISABLED(false, cameraApi -> false, GUI_WIDGET_SETTINGS_CAMERA_TPS_PERSPECTIVE_DISABLED),
+
+        /// activate tps perspective when player aims
+        ON_AIMING(true, EpicFightCameraAPI::isZooming, GUI_WIDGET_SETTINGS_CAMERA_TPS_PERSPECTIVE_ON_AIMING),
+
+        /// always activate tps perspective
+        ALWAYS(true, cameraApi -> true, GUI_WIDGET_SETTINGS_CAMERA_TPS_PERSPECTIVE_ALWAYS);
 
         final boolean hasTPSTransition;
         final Predicate<EpicFightCameraAPI> checker;
+        final Component translatable;
 
-        TPSType(boolean hasTPSTransition, Predicate<EpicFightCameraAPI> checker) {
+        TPSActivationType(boolean hasTPSTransition, Predicate<EpicFightCameraAPI> checker, String translationKey) {
             this.hasTPSTransition = hasTPSTransition;
             this.checker = checker;
+            this.translatable = Component.translatable(translationKey);
         }
 
         public boolean shouldSwitch(EpicFightCameraAPI cameraApi) {
@@ -681,13 +732,13 @@ public class ClientConfig {
         }
 
         @Override
-        public TPSType nextEnum() {
-            return TPSType.values()[(this.ordinal() + 1) % 3];
+        public TPSActivationType nextEnum() {
+            return TPSActivationType.values()[(this.ordinal() + 1) % 3];
         }
 
         @Override
         public String getSerializedName() {
-            return ParseUtil.toLowerCase(this.name());
+            return this.translatable.getString();
         }
     }
 }
